# CogniCore

./: .gitignore  README.md  WORKFLOW_PUBLICATION.md  exemple_config.yaml  professional_github_guide.md  pyproject.toml  python_module_to_pypi_guide.md
.github/: copilot-instructions.md
.github/workflows/: push_to_pypi.yml  python-ci.yml
cognicore/: __init__.py  image_classifier_utils.py  internet_searcher_utils.py  language_model.py  text_classifier_utils.py  vision_utils.py
cognicore/prompts/: llm_image_classification_name.txt  llm_text_classification_index.txt
free_llm_toolbox/: image_classifier_utils.py  internet_searcher_utils.py  text_classifier_utils.py
free_llm_toolbox/prompts/: llm_image_classification_index.txt  llm_text_classification_name.txt
src/: __init__.py  language_model.py  vision_utils.py
tests/: test_text_generation.py
