[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "cognicore"
dynamic = ["version"]
description = "A Python toolbox for easy interaction with various LLMs and Vision models"
readme = "README.md"
authors = [{ name = "Yanis112" }]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["llm", "ai", "vision", "machine-learning", "text-generation"]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.0.0",
    "python-dotenv>=0.19.0",
    "pydantic>=2.0.0",
    "langchain-core>=0.1.0",
    "langchain>=0.1.0",
    "groq>=0.4.0",
    "google-generativeai>=0.3.0",
    "Pillow>=9.0.0",
    "jsonschema==3.2.0",
    "pytest>=8.3.4",
    "build>=1.2.2.post1",
    "twine>=6.1.0",
    "langchain-google-genai>=2.0.10",
    "langchain-cerebras>=0.5.0",
    "langchain-groq>=0.2.4",
    "langchain-community>=0.3.18",
    "langchain-ollama>=0.2.3",
    "ollama>=0.4.7",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "black>=23.0", "isort>=5.0"]

[project.urls]
Homepage = "https://github.com/username/cognicore"
Repository = "https://github.com/username/cognicore"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "cognicore/__version__.py"

[tool.hatch.build]
packages = ["cognicore"]

[tool.uv]
dev-dependencies = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]
